// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should render correctly 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-37zkn6-StyledButton-StyledPageSwitch {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #4f0599;
  background-color: #ffffff;
  color: #4f0599;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
  width: 32px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-37zkn6-StyledButton-StyledPageSwitch svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  border: 1px solid #390171;
  color: #ffffff;
  background-color: #390171;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover svg,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus svg {
  fill: #ffffff;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-37zkn6-StyledButton-StyledPageSwitch svg {
  fill: #c4c9d6;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-190f6hx-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1senakc-StyledPageButton {
  color: #151a2d;
  line-height: 24px;
  font-size: 16px;
  font-weight: Medium;
  width: 48px;
  height: 48px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-radius: 4px;
}

.cache-1senakc-StyledPageButton:disabled {
  pointer-events: none;
  background-color: #f6f6f8;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

.cache-1senakc-StyledPageButton[aria-current='true']:not(:disabled) {
  color: #4f0599;
  border-color: #4f0599;
}

.cache-1senakc-StyledPageButton[aria-current='false']:hover {
  color: #390171;
  border-color: #d4dae7;
}

.cache-167eu9b-StyledButton-StyledPageSwitch {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #4f0599;
  background-color: #ffffff;
  color: #4f0599;
  width: 32px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:hover,
.cache-167eu9b-StyledButton-StyledPageSwitch:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-167eu9b-StyledButton-StyledPageSwitch svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:hover,
.cache-167eu9b-StyledButton-StyledPageSwitch:focus {
  border: 1px solid #390171;
  color: #ffffff;
  background-color: #390171;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:hover svg,
.cache-167eu9b-StyledButton-StyledPageSwitch:focus svg {
  fill: #ffffff;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

<div
    class="cache-a1981g-StyledContainer e2j7atg1"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="true"
        aria-label="First"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
            />
            <path
              d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="true"
        aria-label="Back"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.29289 8.70735C4.90237 8.31683 4.90237 7.68366 5.29289 7.29314L9.29289 3.29314C9.68342 2.90261 10.3166 2.90261 10.7071 3.29314C11.0976 3.68366 11.0976 4.31683 10.7071 4.70735L7.41421 8.00024L10.7071 11.2931C11.0976 11.6837 11.0976 12.3168 10.7071 12.7074C10.3166 13.0979 9.68342 13.0979 9.29289 12.7074L5.29289 8.70735Z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e2j7atg4"
    >
      <button
        aria-current="true"
        aria-label="Page 1"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        1
      </button>
      <button
        aria-current="false"
        aria-label="Page 2"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        2
      </button>
      <button
        aria-current="false"
        aria-label="Page 3"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        3
      </button>
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        4
      </button>
      <button
        aria-current="false"
        aria-label="Page 5"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        5
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="false"
        aria-label="Next"
        class="e2j7atg3 em6gco80 cache-167eu9b-StyledButton-StyledPageSwitch"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="Last"
        class="e2j7atg3 em6gco80 cache-167eu9b-StyledButton-StyledPageSwitch"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
            />
            <path
              d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with disabled 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-37zkn6-StyledButton-StyledPageSwitch {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #4f0599;
  background-color: #ffffff;
  color: #4f0599;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
  width: 32px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-37zkn6-StyledButton-StyledPageSwitch svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  border: 1px solid #390171;
  color: #ffffff;
  background-color: #390171;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover svg,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus svg {
  fill: #ffffff;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-37zkn6-StyledButton-StyledPageSwitch svg {
  fill: #c4c9d6;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-190f6hx-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1senakc-StyledPageButton {
  color: #151a2d;
  line-height: 24px;
  font-size: 16px;
  font-weight: Medium;
  width: 48px;
  height: 48px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-radius: 4px;
}

.cache-1senakc-StyledPageButton:disabled {
  pointer-events: none;
  background-color: #f6f6f8;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

.cache-1senakc-StyledPageButton[aria-current='true']:not(:disabled) {
  color: #4f0599;
  border-color: #4f0599;
}

.cache-1senakc-StyledPageButton[aria-current='false']:hover {
  color: #390171;
  border-color: #d4dae7;
}

<div
    class="cache-a1981g-StyledContainer e2j7atg1"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="true"
        aria-label="First"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
            />
            <path
              d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="true"
        aria-label="Back"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.29289 8.70735C4.90237 8.31683 4.90237 7.68366 5.29289 7.29314L9.29289 3.29314C9.68342 2.90261 10.3166 2.90261 10.7071 3.29314C11.0976 3.68366 11.0976 4.31683 10.7071 4.70735L7.41421 8.00024L10.7071 11.2931C11.0976 11.6837 11.0976 12.3168 10.7071 12.7074C10.3166 13.0979 9.68342 13.0979 9.29289 12.7074L5.29289 8.70735Z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e2j7atg4"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1senakc-StyledPageButton e2j7atg0"
        disabled=""
      >
        4
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="cache-1senakc-StyledPageButton e2j7atg0"
        disabled=""
      >
        5
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="cache-1senakc-StyledPageButton e2j7atg0"
        disabled=""
      >
        6
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="true"
        aria-label="Next"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="true"
        aria-label="Last"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
            />
            <path
              d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with disabled 2`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-37zkn6-StyledButton-StyledPageSwitch {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #4f0599;
  background-color: #ffffff;
  color: #4f0599;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
  width: 32px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-37zkn6-StyledButton-StyledPageSwitch svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  border: 1px solid #390171;
  color: #ffffff;
  background-color: #390171;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover svg,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus svg {
  fill: #ffffff;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-37zkn6-StyledButton-StyledPageSwitch svg {
  fill: #c4c9d6;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-190f6hx-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1senakc-StyledPageButton {
  color: #151a2d;
  line-height: 24px;
  font-size: 16px;
  font-weight: Medium;
  width: 48px;
  height: 48px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-radius: 4px;
}

.cache-1senakc-StyledPageButton:disabled {
  pointer-events: none;
  background-color: #f6f6f8;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

.cache-1senakc-StyledPageButton[aria-current='true']:not(:disabled) {
  color: #4f0599;
  border-color: #4f0599;
}

.cache-1senakc-StyledPageButton[aria-current='false']:hover {
  color: #390171;
  border-color: #d4dae7;
}

<div
    class="cache-a1981g-StyledContainer e2j7atg1"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="true"
        aria-label="First"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
            />
            <path
              d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="true"
        aria-label="Back"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.29289 8.70735C4.90237 8.31683 4.90237 7.68366 5.29289 7.29314L9.29289 3.29314C9.68342 2.90261 10.3166 2.90261 10.7071 3.29314C11.0976 3.68366 11.0976 4.31683 10.7071 4.70735L7.41421 8.00024L10.7071 11.2931C11.0976 11.6837 11.0976 12.3168 10.7071 12.7074C10.3166 13.0979 9.68342 13.0979 9.29289 12.7074L5.29289 8.70735Z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e2j7atg4"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1senakc-StyledPageButton e2j7atg0"
        disabled=""
      >
        4
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="cache-1senakc-StyledPageButton e2j7atg0"
        disabled=""
      >
        5
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="cache-1senakc-StyledPageButton e2j7atg0"
        disabled=""
      >
        6
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="true"
        aria-label="Next"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="true"
        aria-label="Last"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
            />
            <path
              d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with pageTabCount 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-167eu9b-StyledButton-StyledPageSwitch {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #4f0599;
  background-color: #ffffff;
  color: #4f0599;
  width: 32px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:hover,
.cache-167eu9b-StyledButton-StyledPageSwitch:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-167eu9b-StyledButton-StyledPageSwitch svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:hover,
.cache-167eu9b-StyledButton-StyledPageSwitch:focus {
  border: 1px solid #390171;
  color: #ffffff;
  background-color: #390171;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:hover svg,
.cache-167eu9b-StyledButton-StyledPageSwitch:focus svg {
  fill: #ffffff;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-190f6hx-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1senakc-StyledPageButton {
  color: #151a2d;
  line-height: 24px;
  font-size: 16px;
  font-weight: Medium;
  width: 48px;
  height: 48px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-radius: 4px;
}

.cache-1senakc-StyledPageButton:disabled {
  pointer-events: none;
  background-color: #f6f6f8;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

.cache-1senakc-StyledPageButton[aria-current='true']:not(:disabled) {
  color: #4f0599;
  border-color: #4f0599;
}

.cache-1senakc-StyledPageButton[aria-current='false']:hover {
  color: #390171;
  border-color: #d4dae7;
}

<div
    class="cache-a1981g-StyledContainer e2j7atg1"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="false"
        aria-label="First"
        class="e2j7atg3 em6gco80 cache-167eu9b-StyledButton-StyledPageSwitch"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
            />
            <path
              d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="Back"
        class="e2j7atg3 em6gco80 cache-167eu9b-StyledButton-StyledPageSwitch"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.29289 8.70735C4.90237 8.31683 4.90237 7.68366 5.29289 7.29314L9.29289 3.29314C9.68342 2.90261 10.3166 2.90261 10.7071 3.29314C11.0976 3.68366 11.0976 4.31683 10.7071 4.70735L7.41421 8.00024L10.7071 11.2931C11.0976 11.6837 11.0976 12.3168 10.7071 12.7074C10.3166 13.0979 9.68342 13.0979 9.29289 12.7074L5.29289 8.70735Z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e2j7atg4"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        4
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        5
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        6
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="false"
        aria-label="Next"
        class="e2j7atg3 em6gco80 cache-167eu9b-StyledButton-StyledPageSwitch"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="Last"
        class="e2j7atg3 em6gco80 cache-167eu9b-StyledButton-StyledPageSwitch"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
            />
            <path
              d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly with pageClick 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-167eu9b-StyledButton-StyledPageSwitch {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #4f0599;
  background-color: #ffffff;
  color: #4f0599;
  width: 32px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:hover,
.cache-167eu9b-StyledButton-StyledPageSwitch:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-167eu9b-StyledButton-StyledPageSwitch svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:hover,
.cache-167eu9b-StyledButton-StyledPageSwitch:focus {
  border: 1px solid #390171;
  color: #ffffff;
  background-color: #390171;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:hover svg,
.cache-167eu9b-StyledButton-StyledPageSwitch:focus svg {
  fill: #ffffff;
}

.cache-167eu9b-StyledButton-StyledPageSwitch:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-190f6hx-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1senakc-StyledPageButton {
  color: #151a2d;
  line-height: 24px;
  font-size: 16px;
  font-weight: Medium;
  width: 48px;
  height: 48px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-radius: 4px;
}

.cache-1senakc-StyledPageButton:disabled {
  pointer-events: none;
  background-color: #f6f6f8;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

.cache-1senakc-StyledPageButton[aria-current='true']:not(:disabled) {
  color: #4f0599;
  border-color: #4f0599;
}

.cache-1senakc-StyledPageButton[aria-current='false']:hover {
  color: #390171;
  border-color: #d4dae7;
}

<div
    class="cache-a1981g-StyledContainer e2j7atg1"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="false"
        aria-label="First"
        class="e2j7atg3 em6gco80 cache-167eu9b-StyledButton-StyledPageSwitch"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
            />
            <path
              d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="Back"
        class="e2j7atg3 em6gco80 cache-167eu9b-StyledButton-StyledPageSwitch"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.29289 8.70735C4.90237 8.31683 4.90237 7.68366 5.29289 7.29314L9.29289 3.29314C9.68342 2.90261 10.3166 2.90261 10.7071 3.29314C11.0976 3.68366 11.0976 4.31683 10.7071 4.70735L7.41421 8.00024L10.7071 11.2931C11.0976 11.6837 11.0976 12.3168 10.7071 12.7074C10.3166 13.0979 9.68342 13.0979 9.29289 12.7074L5.29289 8.70735Z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e2j7atg4"
    >
      <button
        aria-current="false"
        aria-label="Page 1"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        1
      </button>
      <button
        aria-current="true"
        aria-label="Page 2"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        2
      </button>
      <button
        aria-current="false"
        aria-label="Page 3"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        3
      </button>
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        4
      </button>
      <button
        aria-current="false"
        aria-label="Page 5"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        5
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="false"
        aria-label="Next"
        class="e2j7atg3 em6gco80 cache-167eu9b-StyledButton-StyledPageSwitch"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="false"
        aria-label="Last"
        class="e2j7atg3 em6gco80 cache-167eu9b-StyledButton-StyledPageSwitch"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
            />
            <path
              d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly with pageCount is 1 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-37zkn6-StyledButton-StyledPageSwitch {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  border: 1px solid #4f0599;
  background-color: #ffffff;
  color: #4f0599;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
  width: 32px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-37zkn6-StyledButton-StyledPageSwitch svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  border: 1px solid #390171;
  color: #ffffff;
  background-color: #390171;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:hover svg,
.cache-37zkn6-StyledButton-StyledPageSwitch:focus svg {
  fill: #ffffff;
}

.cache-37zkn6-StyledButton-StyledPageSwitch:focus {
  box-shadow: 0 0 0 2px rgba(57,1,113,0.25);
}

.cache-37zkn6-StyledButton-StyledPageSwitch svg {
  fill: #c4c9d6;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-190f6hx-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1senakc-StyledPageButton {
  color: #151a2d;
  line-height: 24px;
  font-size: 16px;
  font-weight: Medium;
  width: 48px;
  height: 48px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-radius: 4px;
}

.cache-1senakc-StyledPageButton:disabled {
  pointer-events: none;
  background-color: #f6f6f8;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

.cache-1senakc-StyledPageButton[aria-current='true']:not(:disabled) {
  color: #4f0599;
  border-color: #4f0599;
}

.cache-1senakc-StyledPageButton[aria-current='false']:hover {
  color: #390171;
  border-color: #d4dae7;
}

<div
    class="cache-a1981g-StyledContainer e2j7atg1"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="true"
        aria-label="First"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
            />
            <path
              d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="true"
        aria-label="Back"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.29289 8.70735C4.90237 8.31683 4.90237 7.68366 5.29289 7.29314L9.29289 3.29314C9.68342 2.90261 10.3166 2.90261 10.7071 3.29314C11.0976 3.68366 11.0976 4.31683 10.7071 4.70735L7.41421 8.00024L10.7071 11.2931C11.0976 11.6837 11.0976 12.3168 10.7071 12.7074C10.3166 13.0979 9.68342 13.0979 9.29289 12.7074L5.29289 8.70735Z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e2j7atg4"
    >
      <button
        aria-current="true"
        aria-label="Page 1"
        class="cache-1senakc-StyledPageButton e2j7atg0"
      >
        1
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e2j7atg2"
    >
      <button
        aria-disabled="true"
        aria-label="Next"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
            />
          </svg>
        </div>
      </button>
      <button
        aria-disabled="true"
        aria-label="Last"
        class="e2j7atg3 em6gco80 cache-37zkn6-StyledButton-StyledPageSwitch"
        disabled=""
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco83"
        >
          <svg
            class="cache-190f6hx-StyledIcon-sizeStyles etwatq50"
            viewBox="0 0 16 16"
          >
            <path
              d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
            />
            <path
              d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
